# xiaohui-agentic-playground

./: LICENSE  README.md  pyproject.toml
1-agentic-workflow/: README.md
2-openai-sdk/: README.md  email_battle.ipynb
3-crew-ai/email_battle/: README.md  email_battle_result.txt  pyproject.toml
3-crew-ai/email_battle/src/email_battle/: main.py
3-crew-ai/email_battle/src/email_battle/crews/email_battle_crew/: email_battle_crew.py
3-crew-ai/email_battle/src/email_battle/crews/email_battle_crew/config/: agents.yaml  tasks.yaml
