[project]
name = "email_battle"
version = "0.1.0"
description = "email_battle using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "anthropic>=0.40.0",
]

[project.scripts]
kickoff = "email_battle.main:kickoff"
run_crew = "email_battle.main:kickoff"
plot = "email_battle.main:plot"
run_with_trigger = "email_battle.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
